created docker file created docker compose deployed the app to Docker

--- a/Infrastructure.Tests/Infrastructure.Tests.csproj
+++ b/Infrastructure.Tests/Infrastructure.Tests.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application.Tests\Application.Tests.csproj" />
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
