--- a/launchSettings.json
+++ b/launchSettings.json
@@ -3,8 +3,11 @@
     "Docker Compose": {
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
+      "composeLaunchAction": "LaunchBrowser",
+      "composeLaunchServiceName": "todolist",
+      "composeLaunchUrl": "{Scheme}://{ServiceIPAddress}{ServicePort}/swagger",
       "serviceActions": {
-        "todolist": "StartWithoutDebugging"
+        "todolist": "StartDebugging"
       }
     }
   }
