--- a/launchSettings.json
+++ b/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "profiles": {
     "Docker Compose": {
-      "commandName": "DockerCompose",
+      "commandName": "Executable",
       "commandVersion": "1.0",
       "composeLaunchAction": "LaunchBrowser",
       "composeLaunchServiceName": "todolist",
