--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     image: ${DOCKER_REGISTRY-}todolist
     build:
       context: .
-      dockerfile: ToDoList\Dockerfile
+      dockerfile: ToDoList/Dockerfile
