Chanaged the Databse acccess from In memoery to SQL sever

--- a/ToDoList/appsettings.Development.json
+++ b/ToDoList/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "localcs": "Data Source=ALIREZA;Initial Catalog=TodoDB;User Id=admin;Password=1101412;Encrypt=false; TrustServerCertificate=True"
+  },
+
+  "AllowedHosts": "*"
 }
+ 
