--- a/ToDoList/appsettings.json
+++ b/ToDoList/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "localcs": "Data Source=ALIREZA;Initial Catalog=TodoDB;User Id=admin;Password=1101412;Encrypt=false;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
